--- a/popkornApp/static/css/stylesheet.css
+++ b/popkornApp/static/css/stylesheet.css
@@ -380,6 +380,9 @@ header ul[no="1"] a:hover, .nav_active{
 #index li a:hover{
     color:#5e52a1;
 }
+#index ul[no='3']{
+    display:none;
+}
 .list_no{
     font-size: 0.8em;
     font-weight:bold;
@@ -800,5 +803,43 @@ header ul[no="1"] a:hover, .nav_active{
     }
 #calendar .date {
         float: none;
+    }
+}
+
+/********************* 모바일 ***************************/
+@media(max-width:800px){    
+    header ul{
+        display:none;
+    }
+    header p{
+        float:right;
+        width:20%;
+        margin-top:-0.8%;
+    }
+    header ul[no="3"]{
+        display:block;
+        width:40%;
+        padding:10px 50px 0px 0px;
+        position: absolute;
+        top:50px;
+        right:0; 
+        height:700px;
+        background: #ffffff;
+    }
+    header ul[no="3"] li{
+        display: block;
+        width:100%;
+        padding:15px;
+        border-bottom: 1px solid #eeeeee;
+        background: #ffffff;
+    } 
+    header ul[no="3"] li .right{
+        margin-top:-10px;
+    }
+    #index article{
+        display: block;
+    }
+    #index article div{
+        display: inline-block;
     }
 }
