--- a/popkornApp/templates/index.html
+++ b/popkornApp/templates/index.html
@@ -82,7 +82,7 @@
         </div>
         <div>
             <p>TODAY'S KPOP</p>
-            <iframe width="100%" 
+            <iframe 
                     height="450px" 
                     src="https://www.youtube.com/embed/XsX3ATc3FbA" 
                     frameborder="0" 
@@ -91,7 +91,7 @@
                     id="today_kpop"
                     ></iframe>
         </div>
-    </article>
+    </article> 
     <article>
         <p><a href="/community">NOW HOT</a></p>
         <ul>
