--- a/popkornApp/templates/index.html
+++ b/popkornApp/templates/index.html
@@ -78,6 +78,14 @@
                         </a>
                     </div>
                     {%endfor%} 
+                    <div data-img="https://www.allkpop.com/upload/2019/05/content/011128/twjpg.jpg"
+                    data-fit="cover">
+                        <a href="https://www.allkpop.com/article/2019/05/twice-announce-their-first-ever-us-tour-dates">
+                            <p> TWICE announce their first-ever U.S tour dates!</p>
+                        </a>
+                    </div> 
+                </a>
+            </div>
                 </div>
         </div>
         <div>
