--- a/popkornApp/templates/calendar.html
+++ b/popkornApp/templates/calendar.html
@@ -4,18 +4,10 @@
         
 
 <section class="calendar-wrap">   
-    <div id="container">
-        <div id="button_left">
-            <button><a href="calendar7">prev</a></button>
-        </div>
-        
-        <div id="month_title">
-            <h1>August 2019</h1>
-        </div>
-        
-        <div id="button_right">
-            <button><a href="calendar9">next</a></button>
-        </div>
+    <div class="calendar-title"> 
+        <a href="calendar7" class="btn left">prev</a>
+        <h1>August 2019</h1> 
+        <a href="calendar9" class="btn right">next</a>
     </div>
         <div id="calendar">
             <ul class="weekdays">
