--- a/popkornApp/templates/layout.html
+++ b/popkornApp/templates/layout.html
@@ -70,8 +70,7 @@
                 nav_active();
 
                 $(".forbidden").click(function(){
-                        alert("비공개된 메뉴입니다.");
-                        location.href=""; 
+                    alert("비공개된 메뉴입니다."); 
                 });
 
                 $("#slide_open").click(function(){
@@ -207,7 +206,7 @@
                 <li><a href="/news" class="nav_active">NEWS</a></li>
                 <li><a href="" class="forbidden" >CHART</a></li>
                 <li><a href="/mediaboard">MEDIA</a></li>
-                <li><a href="/calendar" class="forbidden">CALENDAR</a></li>
+                <li><a href="" class="forbidden">CALENDAR</a></li>
                 <li><a href="/community" >COMMUNITY</a></li>
             </ul>
         <footer>
