--- a/popkornApp/templates/layout.html
+++ b/popkornApp/templates/layout.html
@@ -179,7 +179,7 @@
             {% else %}
             <a href="#" class="btn popup_open" pop_nm="login">LOGIN</a>
             {% endif %}  
-            <a id="slide_open" class="right" >MENU</a>
+            <a id="slide_open" class="right" ondragstart=return false >MENU</a>
         </header>    
         {% block layoutblock %}
         {% endblock %}    
