--- a/popkornApp/templates/layout.html
+++ b/popkornApp/templates/layout.html
@@ -56,7 +56,7 @@
                 });
 
                 //로그아웃
-                $("a[href='#logout'","a[href='#logout2'").click(function(){
+                $("a[href='#logout']","a[href='#logout2']").click(function(){
                     $("ul[no='3']").hide();
                     if(confirm("Really want to leave?")){
                         $("#logout").submit();
