--- a/popkornApp/static/css/stylesheet.css
+++ b/popkornApp/static/css/stylesheet.css
@@ -859,6 +859,7 @@ header ul[no="1"] a:hover, .nav_active{
         top:30px;
         right:0; 
         height:200%;
+        z-index: 1002;
         background: #ffffff;
     }
     ul[no="3"] li{
