--- a/mediaboard/templates/media.html
+++ b/mediaboard/templates/media.html
@@ -30,10 +30,11 @@
         {% for m in page_posts%}
         <article>
             <div class="media-title">
-                    <a href="#" class="tag">{{m.category}})</a>
-                    {{m.title}} 
-                    <p>{{m.created_at | date:"f  d Y" }}</p>
-            
+                    <div>
+                        <a href="#" class="tag">{{m.category}})</a>
+                        {{m.title}}
+                        <p>{{m.created_at | date:"f  d Y" }}</p>
+                    </div>   
                     <div class="date">
                         <a href="/mediaboard/edit/{{m.id}}">edit</a>
                         <a href="/mediaboard/delete/{{m.id}}">delete</a>
