--- a/popkornApp/static/css/stylesheet.css
+++ b/popkornApp/static/css/stylesheet.css
@@ -251,12 +251,19 @@ header ul[no="1"] a:hover, .nav_active{
 
 .media-title{
     font-size: 1.2em;
+    padding-top:30px;
     position: relative;
     width:80%;
     margin:auto;
     color:#464646;
-    text-overflow: ellipsis;
     font-family: 'Darker Grotesque', sans-serif;
+} 
+.media-title div:nth-child(1){
+    text-overflow: ellipsis;
+    white-space: nowrap; 
+    overflow: hidden;
+    width:60%;
+
 }
 .media-title p{
     font-size: 0.8em;
@@ -264,7 +271,7 @@ header ul[no="1"] a:hover, .nav_active{
 }
 .tag{
     font-weight: bold;
-    color:#5e52a1; 
+    color:#5e52a1;  
 }
 .paging{
     list-style-type: none;
@@ -415,7 +422,7 @@ header ul[no="1"] a:hover, .nav_active{
     padding-bottom: 30px;
 } 
 #media .date{
-    margin-top:-65px; 
+    margin-top:-73px; 
 }
 #media .btn{
     font-size: 0.8em;
